# QtRealCtrl

./: CMakeLists.txt  QtRealCtrl项目框架图（终极版）.docx  Qtrealctrl项目框架（手写）.docx  README.md  ctrlmode.cpp  dcsprotocoltypes.cpp  main.cpp  mainwindow.ui  sysform.cpp  上位机软件设计说明书SDS.docx  上位机软件设计说明书SDS.md  固定通信协议代码部分.docx  基于CRC通信协议测试.docx
DcsProtocol/: DcsProtocolTypes.h  dcsprotocoltypes.cpp  sysform.cpp  sysform.h
algorithm/: IAlgorithm.h  adeptivealgorithm.cpp  adeptivealgorithm.h  fnpidalgorithm.cpp  fnpidalgorithm.h  neuralpidalgorithm.cpp  neuralpidalgorithm.h  pidalgorithm.cpp  pidalgorithm.h  predictivealgorithm.cpp  predictivealgorithm.h
core/: ControlManager.cpp  ControlManager.h  DataBuffer.cpp  DataBuffer.h  LogWorker.cpp  LogWorker.h  Sysinfo.h  applogger.cpp  applogger.h  sysinfo.cpp
device/: DeviceInterface.h  fakedevice.cpp  fakedevice.h  serialdevice.cpp  serialdevice.h
file/: liverecorder.cpp  liverecorder.h  rawrxrecorder.cpp  rawrxrecorder.h
protocol/: ctrlmode.h  dcsprotocoltypes.h  framecodec.cpp  framecodec.h  sysform.h  tlvcodec.cpp  tlvcodec.h
schema/: appsysform.cpp  appsysform.h  paranode.cpp  paranode.h  paratlvcodec.cpp  paratlvcodec.h  schema_selftest.cpp  schema_selftest.h  sysformtlvmapper.cpp  sysformtlvmapper.h
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  parameterdialog.cpp  parameterdialog.h
